[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/LevelAssets/Fire/Fire.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/LevelAssets/Fire/22.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Light1.png" type="Texture" id=3]
[ext_resource path="res://Misc/Overlap/InteractRay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Levels/HollowGrove/PickPlant1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Levels/Level1/Sprites/Bonfire.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60.3021, 10 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Off"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "On"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11.3438, 9.85956 )

[node name="BonFire" type="StaticBody2D"]
script = ExtResource( 8 )

[node name="22" type="Sprite" parent="."]
position = Vector2( -0.382511, 0.506624 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.382698, -60.6781 )
shape = SubResource( 5 )
disabled = true

[node name="Fire" parent="." instance=ExtResource( 1 )]
position = Vector2( 0.208992, -7.00603 )

[node name="Light2D" parent="Fire" index="3"]
shadow_enabled = false
shadow_gradient_length = 3.0

[node name="Light2D4" type="Sprite" parent="."]
visible = false
modulate = Color( 0.819608, 0.45098, 0.180392, 0.352941 )
self_modulate = Color( 1, 1, 1, 0.431373 )
material = SubResource( 6 )
position = Vector2( 0.420441, -3.77885 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 200.0
one_shot = true

[node name="InteractRay" parent="." instance=ExtResource( 4 )]
position = Vector2( 7.94289, -9.25546 )
cast_to = Vector2( 0, 20 )

[node name="Sprite" parent="InteractRay" index="0"]
position = Vector2( -23.7705, 7.78076 )

[node name="AnimationPlayer" parent="InteractRay" index="1"]
anims/Idle = SubResource( 8 )
anims/Off = SubResource( 9 )
anims/On = SubResource( 10 )

[node name="PickUpArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -2.31246 )
collision_layer = 1024
monitorable = false

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( -0.243161, 1.70146 )
shape = SubResource( 7 )

[node name="PickUp" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.625, -2.1875 )
stream = ExtResource( 6 )
volume_db = 10.0
bus = "SFX"

[editable path="Fire"]
[editable path="InteractRay"]
